# chatgpt

./: BUILD.gn  bundle - 副本.json.bak  bundle.json  readme.md
interfaces/: chatgpt.h
logs/: crashlog250225-v1.txt  crashlog250225-v2.txt  crashlog250225.txt
napi/: BUILD.gn  chatgpt_napi.cpp  index.d.ts
services/: BUILD.gn  chatgpt.cpp
testNapi/: build-profile.json5  oh-package.json5
testNapi/AppScope/: app.json5
testNapi/AppScope/resources/base/element/: string.json
testNapi/entry/: oh-package.json5
testNapi/entry/src/main/: module.json5
testNapi/entry/src/main/ets/pages/: Index.ets
testNapi/entry/src/main/ets/services/: ChatGPTService.ets
testNapi/entry/src/main/ets/types/: chatgpt.d.ts
testNapi/entry/src/ohosTest/: module.json5
tests/: BUILD.gn  chatgpt_unittest.cpp
