import("//build/ohos.gni")

ohos_shared_library("chatgpt_napi") {
  sources = [ "chatgpt_napi.cpp" ]
  include_dirs = [
    "../interfaces",
    "//foundation/arkui/napi/include"  # Node-API 头文件路径
  ]
  deps = [
    "../services:chatgpt_core",  # 添加对 chatgpt_core 的依赖
    #"//foundation/communication/chatgpt/services:chatgpt_core",
    #"//foundation/arkui/napi:ace_napi"  # 依赖 Node-API 框架
  ]
  #output_name = "chatgpt_napi.z.so"
  defines = [ "NAPI_VERSION=8" ]

  external_deps = [ 
    "napi:ace_napi",
    "hilog:libhilog",
 ]

  part_name = "chatgpt"
  subsystem_name = "communication"

  install_enable = true
  #install_images = [ "system" ]     # 指定安装到system分区
  # 指定库文件的安装路径
  #relative_install_dir = "module"    # 将安装到 /system/lib64/module/ 目录
}
