import("//build/ohos.gni")

ohos_shared_library("chatgpt_core") {
  sources = [ "chatgpt.cpp" ]
  
  include_dirs = [
    "../interfaces",
    "//third_party/curl/include",
  ]
  
  deps = [
  ]

  external_deps = [
    "hilog:libhilog",
    "json:nlohmann_json_static",
    "cJSON:cjson",
    "curl:curl_shared",
  ]

  part_name = "chatgpt"
  subsystem_name = "communication"
  install_enable = true
  install_images = [ "system" ]     # 指定安装到system分区
  # 指定库文件的安装路径
  relative_install_dir = "module"    # 将安装到 /system/lib64/module/ 目录
}